@@ -163,12 +163,8 @@ module Nokogiri
       def wrap(html, &blk)
         each do |j|
           new_parent = Nokogiri.make(html, &blk)
-          j.replace(new_parent)
-          nest = new_parent
-          if nest.child
-            nest = nest.child until nest.child.nil?
-          end
-          j.parent = nest
+          j.parent.add_child(new_parent)
+          new_parent.add_child(j)
         end
         self
       end
